# mcp-fetch-patents

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  AGENT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  links.txt  manual_e2e.md  opencode.json  pyproject.toml  run_manual_e2e.py  tmp_http_smoke.sh
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: api-keys.md  tmp-natural-language-search-plan.md
docs/ultra-plans/mcp-fetch-patents/: DECISIONS.md  INTERVIEW_QUEUE.md  PHASE_B_RUST.md  PRODUCT_GOALS.md  RESEARCH_LOG.md  ROOT.md  SCAFFOLDING.md  SESSION.md
docs/ultra-plans/mcp-fetch-patents/nodes/01-id-canon/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/02-cache-db/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/03-source-fetchers/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/03a-http-sources/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/03b-browser-sources/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/03c-web-search-fallback/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/04-format-conversion/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/05-mcp-protocol/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/06-config/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/mcp-fetch-patents/nodes/07-test-infra/: INTERFACE.md  PLAN.md  SPEC.md
docs/ultra-plans/patent-searcher-agent/: DECISIONS.md  PRODUCT_GOALS.md  RESEARCH_opencode.md  RESEARCH_opencode_agents.md  RESEARCH_patent_search.md  ROOT.md  SESSION.md
docs/ultra-plans/patent-searcher-agent/nodes/01-state-manager/: SPEC.md
docs/ultra-plans/patent-searcher-agent/nodes/02-search-tools/: SPEC.md
docs/ultra-plans/patent-searcher-agent/nodes/03-session-tools/: SPEC.md
prompts/: patent-searcher-system-prompt.txt
src/python/patent_mcp/: __init__.py  __main__.py  cache.py  config.py  http_transport.py  id_canon.py  journal.py  server.py  utils.py
src/python/patent_mcp/converters/: pipeline.py
src/python/patent_mcp/fetchers/: base.py  http.py  orchestrator.py  web_search.py
src/python/patent_mcp/scrapers/: __init__.py  google_patents.py
src/python/patent_mcp/search/: __init__.py  __main__.py  browser_manager.py  google_browser_backend.py  planner.py  profile_manager.py  ranking.py  searchers.py  server.py  session_manager.py
src/rust/: Cargo.toml
src/rust/src/: journal.rs  lib.rs  main.rs  planner.rs  ranking.rs
src/rust/src/cache/: mod.rs
src/rust/src/config/: mod.rs
src/rust/src/converters/: mod.rs
src/rust/src/cooldown/: mod.rs
src/rust/src/fetchers/: browser.rs  mod.rs
src/rust/src/fetchers/http/: bigquery.rs  cipo.rs  epo_ops.rs  espacenet.rs  ip_australia.rs  mod.rs  uspto_ppubs.rs  wipo.rs
src/rust/src/fetchers/web_search/: mod.rs
src/rust/src/id_canon/: mod.rs
src/rust/src/prefetch/: mod.rs
src/rust/src/rate_limit/: mod.rs
src/rust/src/search/: browser_pool.rs  browser_search.rs  mod.rs  orchestrator.rs  profile_manager.rs  searchers.rs  session_manager.rs
src/rust/src/search/searchers/: epo_ops.rs  mod.rs  serpapi.rs  uspto.rs
src/rust/src/server/: mod.rs
tests/cross_impl/: conftest.py  test_cache_parity.py  test_converter_parity.py  test_fetch_response_shape_parity.py  test_id_canon_parity.py  test_mcp_parity.py  test_orchestrator_parity.py  test_planner_parity.py  test_ranking_parity.py  test_source_ordering_parity.py  test_web_search_parity.py
tests/fixtures/browser/google_patents/: US7654321.html
tests/fixtures/ep/EP1234567/sources/: epo_ops_response.xml
tests/fixtures/invalid/: expected_error.json
tests/fixtures/us/US7654321/: metadata.json
tests/fixtures/us/US7654321/sources/: uspto_response.json
tests/python/: conftest.py  test_browser_manager.py  test_browser_scraper.py  test_cache.py  test_config.py  test_converters.py  test_fetchers_http.py  test_fuzz_config.py  test_fuzz_id_canon.py  test_id_canon.py  test_integration.py  test_journal.py  test_orchestrator.py  test_planner.py  test_profile_manager.py  test_ranking.py  test_search_searchers.py  test_search_server.py  test_search_session.py  test_server.py  test_web_search.py
