[package]
name = "patent-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for fetching and caching patents by ID (Rust production implementation)"

[[bin]]
name = "patent-mcp-server"
path = "src/main.rs"

[lib]
name = "patent_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "stream", "blocking", "query", "form"] }
rusqlite = { version = "0.39", features = ["bundled"] }
toml = "1.0"
dirs = "6.0"
libc = "0.2"
hostname = "0.4"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
futures = "0.3"
async-trait = "0.1"
scraper = "0.26"
quick-xml = "0.39"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
